--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,7 @@
           <div class="col-md-6">
             <h2><a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a></h2>
             <p class="post-summary">{{ .Summary }}</p>
-            <a href="{{.Permalink}}" class="btn btn-outline-primary">Read More</a>
+            <a href="{{.Permalink}}" class="btn btn-outline-primary">LEARN MORE</a>
           </div>
         </div>
       </div>
