--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -39,7 +39,7 @@ h1,
   font-size: 48px;
 
   @include tablet {
-    font-size: 40px;
+    font-size: 20px;
   }
 }
 
@@ -48,7 +48,7 @@ h2,
   font-size: 38px;
 
   @include tablet {
-    font-size: 30px;
+    font-size: 20px;
   }
 }
 
@@ -73,5 +73,9 @@ h6,
 }
 
 .display-3{
+  font-size: 3.5rem;
+}
+
+.display-1{
   font-size: 3.5rem;
 }
